--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux-thunk": "^3.1.0",
     "resend": "^4.0.0",
     "uuid": "^10.0.0",
